// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Snapshots No props 1`] = `
<button
  className="sc-AxjAm ecAfij"
  onClick={null}
>
  Test
</button>
`;

exports[`Button Snapshots no children 1`] = `
<button
  className="sc-AxjAm ecAfij"
  onClick={[Function]}
>
  button
</button>
`;

exports[`Button Snapshots with onClick 1`] = `
<button
  className="sc-AxjAm ecAfij"
  onClick={[Function]}
>
  Test
</button>
`;
